# ftctimer

./: .gitignore  CMakeLists.txt  README.md  deploy.js  get_version.py  jsconfig.json  myothermind.pem  ota.ld  package-lock.json  package.json  partitions.csv  replace_sha256.py  sdkconfig  sdkconfig.save
components/wifi-captive-portal-component/: CMakeLists.txt  Kconfig.projbuild  component.mk  wifi-captive-portal-dns.c  wifi-captive-portal-httpd.c  wifi-captive-portal-wifi.c  wifi-captive-portal.c
components/wifi-captive-portal-component/include/: wifi-captive-portal-dns.h  wifi-captive-portal-httpd.h  wifi-captive-portal-wifi.h  wifi-captive-portal.h
main/: CMakeLists.txt  Kconfig.projbuild  app.c  app.h  dnscheck.c  filesystem.c  idf_component.yml  main.c  ota.c  ota_header.c  ota_header.h  webserver.c
spiffs/: config.html  config.js  fileup.html  fileup.js  index.html  index.js  manifest.json  ota.html  ota.js  patterns.txt  styles.css  wifi.html
